sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:5: error: not found: value trie
  while(!trie){
         ^AlgCocktailSort2:6: error: not found: value trie
    trie = true
    ^AlgCocktailSort2:10: error: not found: value trie
        trie = false
        ^AlgCocktailSort2:17: error: not found: value trie
        trie = false
        ^